@@ -458,7 +458,7 @@ void FluxboxWindow::init() {
 
     restoreAttributes();
 
-    if (m_workspace_number < 0 || m_workspace_number >= screen().numberOfWorkspaces())
+    if (m_workspace_number >= screen().numberOfWorkspaces())
         m_workspace_number = screen().currentWorkspaceID();
 
     bool place_window = (m_old_pos_x == static_cast<signed>(m_screen.width()));
